Added picture_scrolls.html and the respective images in picture_scroll/img/.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -3172,72 +3172,180 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Baku</a> + <a class="text-sky-400 hover:text-sky-600" href="">Sohaya</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Baku">Baku</a> + <a class="text-sky-400 hover:text-sky-600" href="#Sohaya">Sohaya</a></td>
                     <td>Amrita Bonus (Inflict Purity) C</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Masaru</a> + <a class="text-sky-400 hover:text-sky-600" href="">Yumehami</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Masaru">Masaru</a> + <a class="text-sky-400 hover:text-sky-600" href="#Yumehami">Yumehami</a></td>
                     <td>Amrita Earned +1.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Hiyobishin</a> + <a class="text-sky-400 hover:text-sky-600" href="">Tengen Kujaku</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Hiyobishin">Hiyobishin</a> + <a class="text-sky-400 hover:text-sky-600" href="#Tengen_Kujaku">Tengen Kujaku</a></td>
                     <td>Damage Bonus (Enemies Defeated) D-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Usura-Hicho</a> + <a class="text-sky-400 hover:text-sky-600" href="">Tengen Kujaku</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Usura-Hicho">Usura-Hicho</a> + <a class="text-sky-400 hover:text-sky-600" href="#Tengen_Kujaku">Tengen Kujaku</a></td>
                     <td>Faster Ki Recovery (Surrounded)</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Nine Tails</a> + <a class="text-sky-400 hover:text-sky-600" href="">Hiyokucho</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Nine_Tails">Nine Tails</a> + <a class="text-sky-400 hover:text-sky-600" href="#Hiyokucho">Hiyokucho</a></td>
                     <td>Heal Self & Allies (Melee Kill) 50</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Atlas Bear</a> + <a class="text-sky-400 hover:text-sky-600" href="">Hiyobishin</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Atlas_Bear">Atlas Bear</a> + <a class="text-sky-400 hover:text-sky-600" href="#Hiyobishin">Hiyobishin</a></td>
                     <td>High Attack Damage +2.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Atlas Bear</a> + <a class="text-sky-400 hover:text-sky-600" href="">Tengen Kujaku</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Atlas_Bear">Atlas Bear</a> + <a class="text-sky-400 hover:text-sky-600" href="#Tengen_Kujaku">Tengen Kujaku</a></td>
                     <td>Increased Attack (Surrounded)</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Shin-Roku</a> + <a class="text-sky-400 hover:text-sky-600" href="">Nekomata</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Shin-Roku">Shin-Roku</a> + <a class="text-sky-400 hover:text-sky-600" href="#Nekomata">Nekomata</a></td>
                     <td>Ki Recovery (Critical) +5.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Saoirse</a> + <a class="text-sky-400 hover:text-sky-600" href="">Gyokuto</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Saoirse">Saoirse</a> + <a class="text-sky-400 hover:text-sky-600" href="#Gyokuto">Gyokuto</a></td>
                     <td>Ki Recovery Bonus (Amrita Guage) D-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Usura-Hicho</a> + <a class="text-sky-400 hover:text-sky-600" href="">Hiyobishin</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Usura-Hicho">Usura-Hicho</a> + <a class="text-sky-400 hover:text-sky-600" href="#Hiyobishin">Hiyobishin</a></td>
                     <td>Ki Recovery Speed +2.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Hakutaku</a> + <a class="text-sky-400 hover:text-sky-600" href="">Mizuchi</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Hakutaku">Hakutaku</a> + <a class="text-sky-400 hover:text-sky-600" href="#Mizuchi">Mizuchi</a></td>
                     <td>Life Drain (Elemental Attack)</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Baku</a> + <a class="text-sky-400 hover:text-sky-600" href="">Yumehami</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Baku">Baku</a> + <a class="text-sky-400 hover:text-sky-600" href="#Yumehami">Yumehami</a></td>
                     <td>Max Yokai Ability Ki Damage +3.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Ho</a> + <a class="text-sky-400 hover:text-sky-600" href="">Oh</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Ho">Ho</a> + <a class="text-sky-400 hover:text-sky-600" href="#Oh">Oh</a></td>
                     <td>Melee Damage vs. Purified Enemy +3.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Usura-Hicho</a> + <a class="text-sky-400 hover:text-sky-600" href="">Shirohami</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Usura-Hicho">Usura-Hicho</a> + <a class="text-sky-400 hover:text-sky-600" href="#Shirohami">Shirohami</a></td>
                     <td>Melee Damage vs. Strong Enemy +2.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Genbu</a> + <a class="text-sky-400 hover:text-sky-600" href="">Isanagami</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Genbu">Genbu</a> + <a class="text-sky-400 hover:text-sky-600" href="#Isanagami">Isanagami</a></td>
                     <td>Onmyo Magic Power</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Kurama Tengu</a> + <a class="text-sky-400 hover:text-sky-600" href="">Ho</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Kurama_Tengu">Kurama Tengu</a> + <a class="text-sky-400 hover:text-sky-600" href="#Ho">Ho</a></td>
                     <td>Quick Attack Damage +3.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><a class="text-sky-400 hover:text-sky-600" href="">Nine Tails</a> + <a class="text-sky-400 hover:text-sky-600" href="">Inosasao</a></td>
+                    <td><a class="text-sky-400 hover:text-sky-600" href="#Nine_Tails">Nine Tails</a> + <a class="text-sky-400 hover:text-sky-600" href="#Inosasao">Inosasao</a></td>
                     <td>Toughness</td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    rbFrosty's Guardian Spirit Tier List
+    ========== ========== ========== ========== ========== -->    
+    <section id="tier_list" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 2xl:px-0 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">rbFrosty's Guardian Spirit Tier List</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Tier</th>
+                    <th>Guardian Spirit</th>
+                </tr>
+
+                <!-- S Tier -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="font-bold">S</span></td>
+                    <td>
+                        <div class="flex flex-row flex-wrap justify-center items-center gap-2">
+                            <a href="#Baku"><img src="./img/baku.png" alt=""></a>
+                            <a href="#Genbu"><img src="./img/genbu.png" alt=""></a>
+                            <a href="#Ho-Oh"><img src="./img/ho-oh.png" alt=""></a>
+                            <a href="#Sohaya"><img src="./img/sohaya.png" alt=""></a>
+                        </div>
+                    </td>
+                </tr>
+
+                <!-- A Tier -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="font-bold">A</span></td>
+                    <td>
+                        <div class="flex flex-row flex-wrap justify-center items-center gap-2">
+                            <a href="#Ame-no-Mitori"><img src="./img/ame-no-mitori.png" alt=""></a>
+                            <a href="#Shin-Roku"><img src="./img/shin-roku.png" alt=""></a>
+                            <a href="#Hiyobishin"><img src="./img/hiyobishin.png" alt=""></a>
+                            <a href="#Atlas_Bear"><img src="./img/atlas_bear.png" alt=""></a>
+                            <a href="#Yatagarasu"><img src="./img/yatagarasu.png" alt=""></a>
+                            <a href="#Inosasao"><img src="./img/inosasao.png" alt=""></a>
+                            <a href="#Tengen_Kujaku"><img src="./img/tengen_kujaku.png" alt=""></a>
+                            <a href="#Nekomata"><img src="./img/nekomata.png" alt=""></a>
+                            <a href="#Yumehami"><img src="./img/yumehami.png" alt=""></a>
+                            <a href="#Oh"><img src="./img/oh.png" alt=""></a>
+                        </div>
+                    </td>
+                </tr>
+
+                <!-- B+ Tier -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="font-bold">B+</span></td>
+                    <td>
+                        <div class="flex flex-row flex-wrap justify-center items-center gap-2">
+                            <a href="#Makami"><img src="./img/makami.png" alt=""></a>
+                            <a href="#Masaru"><img src="./img/masaru.png" alt=""></a>
+                            <a href="#Itokuri"><img src="./img/itokuri.png" alt=""></a>
+                            <a href="#Nine_Tails"><img src="./img/nine_tails.png" alt=""></a>
+                            <a href="#Isanagami"><img src="./img/isanagami.png" alt=""></a>
+                            <a href="#Saoirse"><img src="./img/saoirse.png" alt=""></a>
+                            <a href="#Kurama_Tengu"><img src="./img/kurama_tengu.png" alt=""></a>
+                            <a href="#Blue_Dragon"><img src="./img/blue_dragon.png" alt=""></a>
+                            <a href="#Kuzunoha_The_Fox"><img src="./img/kuzunoha.png" alt=""></a>
+                            <a href="#Janomecho"><img src="./img/janomecho.png" alt=""></a>
+                        </div>
+                    </td>
+                </tr>
+
+                <!-- B- Tier -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="font-bold">B-</span></td>
+                    <td>
+                        <div class="flex flex-row flex-wrap justify-center items-center gap-2">
+                            <a href="#Kagewani"><img src="./img/kagewani.png" alt=""></a>
+                            <a href="#Shirohami"><img src="./img/shirohami.png" alt=""></a>
+                            <a href="#Rokugezo"><img src="./img/rokugezo.png" alt=""></a>
+                            <a href="#Usura-Hicho"><img src="./img/usura-hicho.png" alt=""></a>
+                            <a href="#Yaonami-Hime"><img src="./img/yaonami-hime.png" alt=""></a>
+                            <a href="#Hiyokucho"><img src="./img/hiyokucho.png" alt=""></a>
+                            <a href="#Hakutaku"><img src="./img/hakutaku.png" alt=""></a>
+                            <a href="#Mizuchi"><img src="./img/mizuchi.png" alt=""></a>
+                            <a href="#Ho"><img src="./img/ho.png" alt=""></a>
+                            <a href="#Amabie"><img src="./img/amabie.png" alt=""></a>
+                        </div>
+                    </td>
+                </tr>
+
+                <!-- C Tier -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="font-bold">C</span></td>
+                    <td>
+                        <div class="flex flex-row flex-wrap justify-center items-center gap-2">
+                            <a href="#Okuri-Inu"><img src="./img/okuri-inu.png" alt=""></a>
+                            <a href="#Gyokuto"><img src="./img/gyokuto.png" alt=""></a>
+                            <a href="#Suzaku"><img src="./img/suzaku.png" alt=""></a>
+                        </div>
+                    </td>
                 </tr>
             </table>
         </div>
