Added more content to lapis and picture_scrolls .html files.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -241,7 +241,7 @@
     <section class="w-full my-12 flex flex-col items-center">
         <div class="2xl:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start">
             <ol class="list-decimal list-inside text-xl text-sky-400">
-                <li><a class="hover:text-sky-600" href="javascript: attribute_tables()">Picture Scroll Attribute Scrolls</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: attribute_tables()">Picture Scroll Attribute Tables</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: ultimate_stats()">Ultimate Stats Table</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: path_stats()">Path Stats Table</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: credits()">Credits</a></li>
@@ -252,9 +252,14 @@
 
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Demon Parade Picture Scroll Mechanics</h2>
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Description</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
+
+            <!-- ==========
+            Demon Parade Picture Scroll Mechanics 
+            ==========-->
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Demon Parade Picture Scroll Mechanics</h2>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="text-red-600 font-bold">What are Demon Parade Picture Scrolls?</span> Picture Scrolls are items that
                 randomly drop from enemies. They contain both general and Scroll specific attributes that will be applied to your 
@@ -262,17 +267,86 @@
                 It is placed below the Accessories slots. 
             </p>
             <img src="./img/picture_scroll_mid.png" alt="">
-
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                How to acquire Demon Parade Picture Scrolls? The player must complete Dream of the Samurai (New Game) in order to
-                have the chance at obtaining Picture Scrolls. Upon defeating enemies and bosses there is a random chance that a 
-                Picture Scroll for that specific difficulty will drop. Picture Scrolls can also be "farmed" off of Revenants. Not
-                all Revenants can drop Picture Scrolls, only specific Revenants have the chance to drop a Picture Scroll. Picture
-                Scroll Revenants have a white glow on their graves: 
+                <span class="text-red-600 font-bold">How to acquire Demon Parade Picture Scrolls?</span> The player must complete 
+                Dream of the Samurai (New Game) in order to have the chance at obtaining Picture Scrolls. Upon defeating enemies 
+                and bosses there is a random chance that a Picture Scroll for that specific difficulty will drop. Picture Scrolls 
+                can also be "farmed" off of Revenants. Not all Revenants can drop Picture Scrolls, only specific Revenants have the
+                chance to drop a Picture Scroll. Picture Scroll Revenants have a white glow on their graves: 
                 
                 <!-- !!!!!!!!!! !!!!!!!!!! !!!!!!!!!! -->
-                !!! [Picture of Revenant grave that has a picture scroll]: !!!
+                <span class="text-green-500">!!! TODO: [Picture of Revenant grave that has a picture scroll]: !!!</span>
                 <!-- !!!!!!!!!! !!!!!!!!!! !!!!!!!!!! -->
+            </p>
+
+
+            <!-- ==========
+            Running Demon Parade Picture Scrolls
+            ==========-->
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Running Demon Parade Picture Scrolls</h2>
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                When a player obtains a Picture Scroll, The Scroll will show guaranteed attributes along with other hidden 
+                attribues. The higher tier Picture Scrolls will have access to unique attributes, and will have more attribute 
+                slots. Information about the higher tier Picture Scrolls is in the next section. The Picture Scroll can only be 
+                ran a limited number of times; it is displayed below the name of the Picture Scroll. Upon successfully completing
+                the Picture Scroll, the number of Attempts Allowed will be decreased by 1. Leaving the Picture Scroll mission 
+                through a <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch Fragment</a> or a 
+                <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch</a> will NOT decrease the number of 
+                Attempts Allowed. 
+            </p>
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                When a player obtains a Picture Scroll the Enemies that will appear in the Picture is listed at the bottom of the 
+                Scroll. The enemies that appear is randomly generated along with the level. Once a Scroll is obtained you cannot 
+                change the enemies that will appear in that Scroll. There are 2 major types of "missions" when it comes to Picture
+                Scrolls: 1) A few mobs and a major boss at the end. 2) Mobs that spawn in wave after 
+                wave with / without mini-bosses. 
+            </p>
+
+
+            <!-- ==========
+            Running Picture Scrolls Multiple Times / Hundred Night Incense
+            ==========-->
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Running Picture Scrolls Multiple Times / Hundred Night Incense</h2>
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                As long as we have more than 0 Attempts Allowed, we can run the Picture Scroll. Upon completing the Picture 
+                Scroll the guaranteed attributes will be unlocked along with a few other random attributes. We can choose to run 
+                the same Picture Scroll again, and upon completing the Picture Scroll again, the game will ask us if we want to 
+                keep the attributes the Scroll had previously or if we want to change 1 of the attributes. We can only change 1 
+                attribute at a time. The guaranteed attributes <span class="font-bold">CANNOT</span> be changed. 
+            </p>
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                The attributes are seeded for Picture Scrolls. This means that when you complete a Picture Scroll the "random" 
+                attributes will be the same no matter how many people complete that exact same scroll. Furthermore when an 
+                attribute is being replaced, the options the game gives you will be the same no matter where the Scroll came from.
+            </p>
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                When we reach 0 Attempts Allowed, but we need to run the Picture Scroll a few more times, we can use the 
+                consumable item <a class="text-sky-400 hover:text-sky-600" href="">Hundred Night Incense</a>. Using the Hundred 
+                Night Incense item on a choosen Picture Scroll will increase the number of Attempts Allowed by 1. There are 3 
+                mains ways to acquire Hundred Night Incense: 1) Random drops from enemies. 2) Forging the item from the Blacksmith 
+                after acquiring the Hundred Night Incense Smithing Text. You can get this Smithing Text after you completely max 
+                out the entire Blessing of the Departed Table in the Underworld (Talk to 
+                <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a> / look at the 
+                <a class="text-sky-400 hover:text-sky-600" href="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/lapis/lapis.html">Lapis Lazuli Table</a>). 
+                3) You can recieve Hundred Night Incense as mission rewards. This is generally in replacement of a Picture Scroll; 
+                or if you are supposed to recieve a Scroll but did not, then you will recieve the Hundred Night Incense as a 
+                mission reward instead. 
+            </p>
+
+
+            <!-- ==========
+            Demon Parade Picture Scroll Rarity
+            ==========-->
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Demon Parade Picture Scroll Rarity</h2>
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                The following Picture Scrolls are only acquired in their respective difficulty tier:
+                <div class="place-self-start px-4 2xl:px-0 flex flex-col items-start gap-4 text-slate-300 text-xl">
+                    <span><span class="text-red-600 font-bold">Demon Parade Picture Scrolls:</span> Dream of the Strong</span>
+                    <span><span class="text-red-600 font-bold">Scrolls of the Demon:</span> Dream of the Demon</span>
+                    <span><span class="text-red-600 font-bold">Scrolls of the Wise:</span> Dream of the Wise</span>
+                    <span><span class="text-red-600 font-bold">Scrolls of the Nioh:</span> Dream of the Nioh</span>
+                    <span><span class="text-red-600 font-bold">Scrolls of the Damned:</span> Underworld Depths (Floors 1 - 30)</span>
+                </div>
             </p>
         </div>
     </section>
@@ -327,5 +401,5 @@
 
 <!-- TODO -->
 <!--
-    - 
+    - [Picture of Revenant grave that has a picture scroll]
 -->
