--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -260,12 +260,13 @@
             <img fetchpriority=high src="./img/lapis_lazuli.png" alt="">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-700">Lapis Lazuli: </span>Underworld Lapis Lazuli (also known as Gems of the 
+                <span class="font-bold text-red-600">Lapis Lazuli: </span>Underworld Lapis Lazuli (also known as Gems of the 
                 Departed), is a rare resource that only drops in the Underworld, and the Depths of the Underworld. Regular 
                 Enemies, and Red Enemies in the Netherscape have a random chance to drop between ~0 - 5 Lapis Lazuli. Purple 
                 enemies have a higher chance to drop more Lapis Lazuli. Bosses in the Crucible have a random chance to drop 
                 around ~5 - 15 Lapis Lazuli (guarenteed to drop Lapis Lazuli). When Lapis Lazuli drops, it will drop as an 
-                Ethereal rarity item.
+                Ethereal rarity item. Upon completing the entire table <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a>
+                will reward the player with the <span class="text-red-600 font-bold">Hundred Night Incense Smithing Text</span>.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl italic leading-relaxed">
@@ -407,7 +408,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>Total Lapis Lazuli required to max out the entire Blessings of the Departed table</td>
-                    <td colspan="4"><span class="font-bold text-red-700">10,225 Lapis Lazuli Required</span></td>
+                    <td colspan="4"><span class="font-bold text-yellow-400">10,225 Lapis Lazuli Required</span></td>
                 </tr>
             </table>
         </div>
