Updated the href links for the picture scrolls page in nioh and equipment_index .html pages.

--- a/nioh2/equipment/equipment_index.html
+++ b/nioh2/equipment/equipment_index.html
@@ -330,7 +330,7 @@
                 Demon Parade Picture Scrolls (Button 8)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/picture_scrolls/picture_scrolls.html">
                     
                     <img class="mask rounded-lg" src="./img/picturescrolls_logo.png" alt="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
