Updated content and add more credits in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -777,7 +777,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>Ultimate Heart</td>
-                    <td>Increases the amount of Ki recovered when performing a Ki Pulse by switching stances.</td>
+                    <td>Increases the amount of Ki recovered when performing a Ki Pulse.</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>Ultimate Courage</td>
@@ -788,12 +788,16 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>Ultimate Stamina</td>
                     <td>Unlocks Rank AA for Agility and Toughness. 13% Melee Ki reduction, 15% Dodge Ki reduction, 7% Ki Recovery
-                        Speed and Dash Ki reduction, Increase in Running Speed.
+                        Speed and Dash Ki reduction, Increase in Running Speed for AA Agility.
+                        <br><br>
+
+                        <span class="text-red-600">AA Agility requires 20% weight or less</span>.<br>
+                        <span class="text-red-600">AA Toughness requires 350 or more toughness</span>.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>Ultimate Strength</td>
-                    <td>Increases the Ki damage you inflict, while also allowing you to recover your Ki with a Ki Pulse by
+                    <td>Increases the Active Skill Ki damage you inflict, while also allowing you to recover your Ki with a Ki Pulse by
                         guarding, even when you are not using a Blessed Weapon. If you are using a Blessed Weapon, the amount of
                         Ki you recover when guarding will increase.
                     </td>
@@ -898,7 +902,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
             
             <div class="flex flex-col gap-2 text-slate-300 text-xl">
-                <span>LiuKang1080</span>
+                <span>LiuKang1080, Uteh, Oninomiru</span>
                 <span class="bold-text">Nioh Community Discord Server: 
                     <a class="text-sky-400 hover:text-sky-600" href="https://discord.gg/pAH5U9mRBj" 
                     target="_blank" rel="noopener noreferrer">Here</a></span>
