Added the href links to the soul cores page in nioh2.html.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -363,7 +363,7 @@
                     <a class="px-2 w-full text-xl text-yellow-400" href="">Onmyo Magic</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-yellow-400" href="">Soul Cores</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/cores_index.html">Soul Cores</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/equipment/guardian_spirits/guardian_spirits.html">Guardian Spirits</a>
