Updated spacing in cores_list.html. Added the href link to Soul Cores Attribute Tables in cores_index.html. Added and completed cores_attributes .html and .js files.

--- a/nioh2/equipment/soul_cores/cores_index.html
+++ b/nioh2/equipment/soul_cores/cores_index.html
@@ -271,7 +271,7 @@
                 Attribute Conflict Table (Button 3)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/cores_attributes.html">
 
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Attribute Conflict Table</span>
