Updated the href link for the page Farming Ethereal Soul Cores in cores_index.html.

--- a/nioh2/equipment/soul_cores/cores_index.html
+++ b/nioh2/equipment/soul_cores/cores_index.html
@@ -281,7 +281,7 @@
                 Farming Ethereal Soul Cores (Button 4)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/farming_cores.html">
 
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Farming Ethereal Soul Cores</span>
