Added the guardian spirit small fox logo for the Baku guardian spirit in guardian_spirits.html. Added graces .html and .js files. Added icon images for stats in picture_scrolls.html.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -2933,9 +2933,10 @@
                                 <td>MAG + CRG = 57</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <img src="../img/assets/fox_logo.png" alt="">
-                                    Anima Charge</td>
+                                <td><div class="flex flex-col justify-center items-center gap-3">
+                                    <img src="./img/gs_wolf_small_logo.png" alt="">
+                                    Anima Charge
+                                </div></td>
                                 <td>10.0 % / <span class="text-red-600 group-hover:text-yellow-400">5.0 %</span></td>
                                 <td>HRT + SKL = 55</td>
                             </tr>
