--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -258,7 +258,6 @@
             <img src="./img/picture_scroll_icon.png" alt="">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
-
             <!-- ==========
             Demon Parade Picture Scroll Mechanics 
             ==========-->
@@ -282,20 +281,20 @@
                 <!-- !!!!!!!!!! !!!!!!!!!! !!!!!!!!!! -->
             </p>
 
-
             <!-- ==========
             Running Demon Parade Picture Scrolls
             ==========-->
             <h2 class="py-4 text-3xl text-yellow-400 font-extrabold text-center">Running Demon Parade Picture Scrolls</h2>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                When a player obtains a Picture Scroll, The Scroll will show guaranteed attributes along with other hidden 
+                When a player obtains a Picture Scroll, The Scroll will show fixed attributes along with other hidden 
                 attribues. The higher tier Picture Scrolls will have access to unique attributes, and will have more attribute 
-                slots. Information about the higher tier Picture Scrolls is in the next section. The Picture Scroll can only be 
+                slots. You can have a max total of 6 attributes (5 attributes + 1 Path Stat) with Scrolls of the Damned. 
+                Information about the higher tier Picture Scrolls is in the next section. The Picture Scroll can only be 
                 ran a limited number of times; it is displayed below the name of the Picture Scroll. Upon successfully completing
                 the Picture Scroll, the number of Attempts Allowed will be decreased by 1. Leaving the Picture Scroll mission 
                 through a <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch Fragment</a> or a 
                 <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch</a> will NOT decrease the number of 
-                Attempts Allowed. 
+                Attempts Allowed.
             </p>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 When a player obtains a Picture Scroll the Enemies that will appear in the Picture is listed at the bottom of the 
@@ -304,7 +303,6 @@
                 Scrolls: 1) A few mobs and a major boss at the end. 2) Mobs that spawn in wave after 
                 wave with / without mini-bosses. 
             </p>
-
 
             <!-- ==========
             Running Picture Scrolls Multiple Times / Hundred Night Incense
@@ -335,7 +333,6 @@
                 or if you are supposed to recieve a Scroll but did not, then you will recieve the Hundred Night Incense as a 
                 mission reward instead. 
             </p>
-
 
             <!-- ==========
             Demon Parade Picture Scroll Rarity
@@ -372,7 +369,6 @@
                 Attributes within a table conflict with other attributes in that same table. Attributes in the No Conflict Table 
                 do not conflict with each other. 
             </p>
-
 
             <!-- ==========
             Damage Attributes
@@ -772,7 +768,10 @@
                 </tr>
 
                 <tr class="even:bg-dark-gray-2">
-                    <td>Ultimate Constitution</td>
+                    <td><div class="flex flex-col items-center gap-3">
+                        <span>Ultimate Constitution</span>
+                        <img src="./img/constitution_icon.png" alt="">
+                    </div></td>
                     <td>Allows your health to rapidly replenish itself when you are at 70% health or higher.</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
